[gd_scene load_steps=19 format=3 uid="uid://bxuuwmlma1xmm"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_15kp8"]
[ext_resource type="PackedScene" uid="uid://ceuh25br64vvt" path="res://scenes/player.tscn" id="2_oqgyc"]
[ext_resource type="PackedScene" uid="uid://cmbeb4icp71di" path="res://scenes/diver_enemy.tscn" id="4_7pet0"]
[ext_resource type="AudioStream" uid="uid://cyyydy05fivsp" path="res://assets/audio/laser.ogg" id="4_8y633"]
[ext_resource type="PackedScene" uid="uid://cm23pqetbflrq" path="res://scenes/enemy.tscn" id="4_bskam"]
[ext_resource type="PackedScene" uid="uid://dniho73boedhe" path="res://scenes/hud.tscn" id="4_pq1a5"]
[ext_resource type="AudioStream" uid="uid://137oamlwx2hu" path="res://assets/audio/hit.wav" id="5_f6dy0"]
[ext_resource type="PackedScene" uid="uid://dxnpymj1id4au" path="res://scenes/weak_password.tscn" id="5_i72sq"]
[ext_resource type="PackedScene" uid="uid://c6uejmh8c7koe" path="res://scenes/game_over_screen.tscn" id="5_wfc6m"]
[ext_resource type="PackedScene" uid="uid://dgeirbrnr357x" path="res://scenes/medium_password.tscn" id="6_kmw44"]
[ext_resource type="Texture2D" uid="uid://cjqit2q27aiur" path="res://assets/textures/purple.png" id="6_mxb3t"]
[ext_resource type="AudioStream" uid="uid://b1wymalc4ru36" path="res://assets/audio/explode.wav" id="6_tmg8f"]
[ext_resource type="Texture2D" uid="uid://dfgo50t0a2vci" path="res://assets/textures/star.png" id="7_p4ya3"]
[ext_resource type="PackedScene" uid="uid://7jjv8h2lh8qr" path="res://scenes/strong_password.tscn" id="7_swstw"]
[ext_resource type="PackedScene" uid="uid://cx5uwd3yjc02l" path="res://scenes/antivirus.tscn" id="12_b7p5y"]
[ext_resource type="PackedScene" uid="uid://cxq4s8fucdjpw" path="res://scenes/virus_detection.tscn" id="13_5uo4c"]
[ext_resource type="PackedScene" uid="uid://c1t0q66gpeie1" path="res://scenes/pause_menu.tscn" id="14_fx8d6"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_owlid"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(270, 1, 1)
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = -1000.0
initial_velocity_max = -1000.0
gravity = Vector3(0, 0, 0)

[node name="Game" type="Node2D"]
script = ExtResource("1_15kp8")
enemy_scenes = Array[PackedScene]([ExtResource("4_bskam"), ExtResource("4_7pet0")])
antivirus_scenes = Array[PackedScene]([ExtResource("12_b7p5y")])
password_scenes = Array[PackedScene]([ExtResource("5_i72sq"), ExtResource("6_kmw44"), ExtResource("7_swstw")])

[node name="SFX" type="Node" parent="."]

[node name="LaserSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_8y633")

[node name="HitSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_f6dy0")

[node name="ExplodeSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_tmg8f")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="UILayer" instance=ExtResource("4_pq1a5")]

[node name="GameOverScreen" parent="UILayer" instance=ExtResource("5_wfc6m")]
visible = false

[node name="Virus_detection" parent="UILayer" instance=ExtResource("13_5uo4c")]
visible = false

[node name="PauseMenu" parent="UILayer" instance=ExtResource("14_fx8d6")]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 960)

[node name="PurpleStars" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
texture = ExtResource("6_mxb3t")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 540, 960)

[node name="StarParticleEffect" type="GPUParticles2D" parent="."]
position = Vector2(270, -50)
amount = 20
process_material = SubResource("ParticleProcessMaterial_owlid")
texture = ExtResource("7_p4ya3")
lifetime = 1.25
preprocess = 5.0

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Player" parent="." instance=ExtResource("2_oqgyc")]
position = Vector2(444, 263)

[node name="PlayerSpawnPos" type="Marker2D" parent="."]
position = Vector2(270, 850)

[node name="LaserContainer" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="AntivirusContainer" type="Node2D" parent="."]

[node name="AntivirusSpawnTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="PasswordContainer" type="Node2D" parent="."]

[node name="PasswordSpawnTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="AntivirusSpawnTimer" to="." method="_on_antivirus_spawn_timer_timeout"]
[connection signal="timeout" from="PasswordSpawnTimer" to="." method="_on_password_spawn_timer_timeout"]
